vendor/pin-project-1.0.7/tests/ui/pin_project/add-attr-to-struct.stderr
error: duplicate #[pin] attribute
 --> $DIR/add-attr-to-struct.rs:7:1
  |
7 | #[add_pin_attr(struct)] //~ ERROR duplicate #[pin] attribute
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[pin] attribute may only be used on fields of structs or variants
  --> $DIR/add-attr-to-struct.rs:13:1
   |
13 | #[add_pin_attr(struct)] //~ ERROR #[pin] attribute may only be used on fields of structs or variants
   | ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
